= todorb 1.1.0, 2010-06-23 
* sort folds subtasks so they remain together
* added switches so archived tasks can be seen also
  - show_arch
* reverse sort option: --reverse
* copyunder won't delete, use --delete option to delete also
* changed alias for pri to p, earlier priority


= todorb 1.0.0, 2010-06-22 16:16
* using subcommand gem
* suboptions will come *after* command but before arguments


= todorb 0.2.2, 2010-06-15
* Added subtask addition. One may add subtasks under a task.
* This effects everything! Deleting a task, you may wanna delete all
children. Changing the status of a task may affect all children.
Renumberign and redoing etc affects subtasks. The impact of this change
is quite huge.

= todorb 0.2.1
* Version without subtask. This is a simpler version which i prefer.


## vim:tw=72:ai:formatoptions=tcqln:nocindent